# gslide

./: .gitignore  .npmignore  .npmrc  README.md  package.json  pyproject.toml  skills.sh
.claude/commands/opsx/: sync.md  verify.md
.github/workflows/: release.yml
docs/: project_brief.md
openspec/changes/archive/2026-03-19-gslide-cli-mvp/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-19-gslide-cli-mvp/specs/browser-auth/: spec.md
openspec/changes/archive/2026-03-19-gslide-cli-mvp/specs/cli/: spec.md
openspec/changes/archive/2026-03-19-gslide-cli-mvp/specs/gen-batch/: spec.md
openspec/changes/archive/2026-03-19-gslide-cli-mvp/specs/gen-slide/: spec.md
openspec/changes/archive/2026-03-20-gslide-npm-skill/specs/cicd/: spec.md
openspec/changes/gslide-npm-skill/: design.md  proposal.md  tasks.md
openspec/changes/gslide-npm-skill/specs/cicd/: spec.md
openspec/changes/gslide-npm-skill/specs/claude-skill/: spec.md
openspec/changes/gslide-npm-skill/specs/npm-package/: spec.md
openspec/specs/browser-auth/: spec.md
openspec/specs/cicd/: spec.md
openspec/specs/claude-skill/: spec.md
openspec/specs/cli/: spec.md
openspec/specs/gen-batch/: spec.md
openspec/specs/gen-slide/: spec.md
openspec/specs/npm-package/: spec.md
scripts/: postinstall.sh  sync-version.py
skills/gslide/: SKILL.md
skills/gslide/references/: prompt-engineering.md
src/gslide/: __init__.py  auth.py  browser.py  cli.py  gen.py  prompts.py
tests/: test_auth.py  test_browser.py  test_cli.py  test_gen.py  test_prompts.py
(+1 files in other folders)
