[project]
name = "gslide"
version = "0.1.1"
description = "CLI tool for automating Google Slides 'Help me visualize' feature via browser automation"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
gslide = "gslide.cli:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
